# Style-flow

./: .env  .railway.toml  DEPLOY.md  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  nixpacks.plan.json  nixpacks.toml  package.json  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt
SF_web_microservices/admin-dashboard/: app.py
SF_web_microservices/admin-dashboard/templates/: dashboard.html  database_details.html  login.html  services.html  table_data.html  tables.html
SF_web_microservices/auth-service/: app.py  models.py
SF_web_microservices/client-service/: app.py
SF_web_microservices/event-service/: Dockerfile  models.py
SF_web_microservices/gateway-service/: Dockerfile  app.py
SF_web_microservices/init-scripts/: 02-auth-service.sql  04-resource-service.sql  05-client-service.sql
SF_web_microservices/payment-service/: Dockerfile  app.py  models.py
SF_web_microservices/resource-service/: app.py  models.py
admin-dashboard/: Dockerfile  railway.toml  requirements.txt
admin-dashboard/templates/: api_keys.html  base.html  databases.html  setup.html
auth-service/: Dockerfile  requirements.txt
client-service/: Dockerfile  models.py  railway.toml
event-service/: Dockerfile  app.py
gateway-service/: railway.toml  requirements.txt
init-scripts/: 01-init-schema.sql  02-views.sql  03-event-service.sql  06-payment-service.sql  run-init-scripts.sh
resource-service/: Dockerfile  railway.toml
user-service/: .env  Dockerfile  README.md  app.py  models.py  requirements.txt
