[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "admin-dashboard"
version = "0.1.0"
description = "Style Flow Admin Dashboard Microservice"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "admin_dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.3"
flask-login = "0.6.2"
flask-sqlalchemy = "3.0.3"
flask-wtf = "1.1.1"
wtforms = "3.0.1"
psycopg2-binary = "2.8.6"
python-dotenv = "1.0.0"
flask-bcrypt = "1.0.1"
pyjwt = "2.6.0"
requests = "2.28.2"
itsdangerous = "2.1.2"
werkzeug = "2.2.3"
gunicorn = "20.1.0" 